# ananke

./: .build.yml  .clang-format  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  Cargo.toml  GNUmakefile  Makefile  README.md  ananke.cabal  ananke.sh  appveyor.yml  build.rs  cabal.project  configure  default.nix  flake.nix  hecate.cabal  hecate.nix  release.nix  shell.nix
.builds/: debian.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  haskell.yml  update.yml
example/: ananke.conf  ananke.ini  export.asc  hecate.conf  hecate.toml
example/db/: data.json
example/gnupg/: pubring.gpg  secring.gpg  trustdb.gpg
exe/: Main.hs
executables/: Client.hs  Main.hs  MainState.hs  Server.hs
include/: entry.h  yyjson.h
scripts/: ananke.sh  hecate.sh  test-migration.sh
src/: Ananke.hs  Hecate.hs  application.rs  cipher.rs  cli.rs  command.rs  config.rs  data.rs  entry.c  gpg.rs  lib.rs  main.rs  version.rs  yyjson.c
src/Ananke/: Backend.hs  Class.hs  Configuration.hs  Data.hs  Error.hs  Evaluator.hs  GPG.hs  Interfaces.hs  Parser.hs  Printing.hs
src/Ananke/Backend/: JSON.hs  SQLite.hs
src/Ananke/Backend/JSON/: AppState.hs
src/Ananke/Backend/SQLite/: AppContext.hs  Database.hs
src/Ananke/Configuration/: Parser.hs
src/Ananke/Data/: Common.hs  Core.hs  Entry.hs  SecureEntry.hs
src/Ananke/GPG/: Process.hs
src/Data/: ByteString64.hs  Multimap.hs
src/Hecate/: AppM.hs  AppState.hs  AppStateM.hs  Carriers.hs  Client.hs  Configuration.hs  Context.hs  Crypto.hs  Data.hs  Database.hs  Error.hs  Evaluator.hs  GPG.hs  IO.hs  Interfaces.hs  Parser.hs  Printing.hs  Server.hs  Types.hs  Util.hs
src/Hecate/Backend/: JSON.hs  SQLite.hs  SQLiteSimple.hs
src/Hecate/Backend/JSON/: AppState.hs
src/Hecate/Backend/SQLite/: AppContext.hs  Database.hs
src/Hecate/Backend/SQLiteSimple/: AppContext.hs  Database.hs
src/Hecate/Client/: Crypto.hs  Types.hs
src/Hecate/Configuration/: Parser.hs
src/Hecate/GPG/: Process.hs
src/Hecate/IO/: Config.hs  Parser.hs
src/Hecate/Server/: Database.hs  Types.hs
src/application/: base.rs  common.rs  intf.rs  json.rs  sqlite.rs  text.rs
src/cipher/: base.rs  gpg.rs  gpgme.rs
src/data/: schema.rs
test/: Main.hs  data-schema-v3.json  json_parse_test.c
test/Ananke/: Orphans.hs  Properties.hs
test/Ananke/Backend/JSON/: Tests.hs
test/Test/Ananke/: Orphans.hs  Properties.hs
test/Test/Ananke/Backend/: JSON.hs
test/Test/Data/: Multimap.hs
tests/: CryptoProperties.hs  DatabaseProperties.hs  Generators.hs  HLint.hs  IOProperties.hs  Instances.hs  Main.hs  cli_tests.rs  data-schema-v2.json  migration_tests.rs
tests/Ananke/: Properties.hs
tests/Data/Multimap/: Tests.hs
tests/Hecate/: Generators.hs  Orphans.hs  Properties.hs
tests/Hecate/Backend/JSON/: Tests.hs
tests/Hecate/Client/: Properties.hs
tests/Hecate/Client/Crypto/: Properties.hs
tests/Hecate/Crypto/: Properties.hs
tests/Hecate/Database/: Properties.hs
tests/Hecate/IO/: Properties.hs
tests/Hecate/Server/Database/: Properties.hs
tests/base/: mod.rs
tests/cli_tests/: add.stdout  error_add_without_description.stderr  error_lookup_without_description.stderr  import_lookup_many.stdout  import_modify_non_existent.stderr  lookup_identity.stdout  lookup_many.stdout  lookup_many_verbose.stdout  lookup_single.stdout  lookup_www_verbose.stdout  modify.stdout  modify_multiple.stderr  modify_non_existent.stderr  usage.stderr  usage_add.stderr  usage_export.stderr  usage_import.stderr  usage_lookup.stderr  usage_modify.stderr  usage_remove.stderr
tests/migration_tests/: data-schema-v1.sql  data-schema-v2.json  data-schema-v2.sql  data-schema-v3.json  migrate_to_unknown_schema_version.stderr
