[package]
name = "ananke"
version = "0.11.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", default-features = false, features = ["std", "help", "string", "usage"] }
configparser = "3.0.4"
data-encoding = "2.5.0"
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
time = { version = "0.3.30", features = ["macros", "formatting", "parsing", "serde"] }
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
snapbox = { version = "0.5.9", default-features = false, features = ["diff", "path"] }
