[package]
name = "ananke"
version = "0.12.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.19", default-features = false, features = ["std", "derive", "help", "string", "usage"] }
configparser = "3.0.4"
data-encoding = "2.5.0"
directories = "5.0.1"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
time = { version = "0.3.30", features = ["macros", "formatting", "parsing", "serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
snapbox = { version = "0.6.7", default-features = false, features = ["diff", "path"] }
tempfile = "3.10.1"
