cabal-version:       2.4
name:                ananke
version:             0.10.0.0
synopsis:            A minimal password manager
description:         ananke is a minimal password manager.
license:             ISC
license-file:        LICENSE
author:              Henry Till
maintainer:          henrytill@gmail.com
copyright:           (c) 2017-2024 Henry Till
category:            System
build-type:          Simple

extra-source-files:
  .gitignore
  .hlint.yaml
  README.md
  example/ananke.ini
  example/gnupg/pubring.gpg
  example/gnupg/secring.gpg
  example/gnupg/trustdb.gpg

source-repository head
  type:     git
  location: https://github.com/henrytill/ananke.git

executable ananke
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base   >=4.9  && <5
                     , ananke
  hs-source-dirs:      exe
  default-language:    Haskell98
  default-extensions:  ImportQualifiedPost
  ghc-options:         -Wall

library
  exposed-modules:     Ananke
                     , Ananke.Backend
                     , Ananke.Backend.SQLite
                     , Ananke.Backend.SQLite.AppContext
                     , Ananke.Backend.SQLite.Database
                     , Ananke.Backend.JSON
                     , Ananke.Backend.JSON.AppState
                     , Ananke.Class
                     , Ananke.Configuration
                     , Ananke.Data
                     , Ananke.Evaluator
                     , Ananke.Error
                     , Ananke.GPG
                     , Ananke.GPG.Process
                     , Ananke.Parser
                     , Ananke.Printing
                     , Data.ByteString64
                     , Data.Multimap
  build-depends:       base                 >=4.9   && <5
                     , aeson                >=1.5   && <3
                     , aeson-pretty         >=0.8.7 && <0.9
                     , base64-bytestring    >=1.0   && <1.3
                     , bytestring           >=0.10  && <0.12
                     , containers           >=0.6   && <0.7
                     , direct-sqlite        >=2.3   && <2.4
                     , directory            >=1.2.3 && <1.4
                     , filepath             >=1.4   && <1.5
                     , ini                  >=0.4   && <0.5
                     , mtl                  >=2.2   && <2.4
                     , optparse-applicative >=0.13  && <0.18
                     , pretty               >=1.1   && <1.2
                     , process              >=1.4   && <2
                     , SHA                  >=1.6   && <1.7
                     , text                 >=1.2   && <2.2
                     , time                 >=1.5   && <2
  hs-source-dirs:      src
  default-language:    Haskell98
  default-extensions:  ImportQualifiedPost
  ghc-options:         -Wall


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Test.Ananke.Backend.JSON
                     , Test.Ananke.Orphans
                     , Test.Ananke.Properties
                     , Test.Data.Multimap
  build-depends:       base          >=4.9   && <5
                     , QuickCheck    >=2.8   && <2.15
                     , aeson         >=1.5   && <3
                     , aeson-pretty  >=0.8.7 && <0.9
                     , bytestring    >=0.10  && <0.12
                     , containers    >=0.6   && <0.7
                     , direct-sqlite >=2.3   && <2.4
                     , directory     >=1.2.3 && <1.4
                     , dwergaz       >=0.2   && <0.3
                     , mtl           >=2.2   && <2.4
                     , temporary     >=1.3   && <1.4
                     , text          >=1.2   && <2.2
                     , ananke
  hs-source-dirs:      test
  default-language:    Haskell98
  default-extensions:  ImportQualifiedPost
  ghc-options:         -Wall

