name:                hecate
version:             0.8.0.0
synopsis:            A minimal password manager
description:         hecate is a minimal password manager.
license:             ISC
license-file:        LICENSE
author:              Henry Till
maintainer:          henrytill@gmail.com
copyright:           (c) 2017-2023 Henry Till
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  .gitignore
  .hlint.yaml
  .stylish-haskell.yaml
  README.md
  example/hecate.conf
  example/gnupg/pubring.gpg
  example/gnupg/secring.gpg
  example/gnupg/trustdb.gpg

source-repository head
  type:     git
  location: https://git.sr.ht/~henrytill/hecate

flag backend-json
  description: Build with experimental JSON backend
  default: False

executable hecate
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base   >=4.9  && <5
                     , hecate
  hs-source-dirs:      executables
  default-language:    Haskell98
  ghc-options:         -Wall

library
  exposed-modules:     Hecate
                     , Hecate.Backend.SQLite
                     , Hecate.Backend.SQLite.AppContext
                     , Hecate.Backend.SQLite.Database
                     , Hecate.Configuration
                     , Hecate.Configuration.Parser
                     , Hecate.Data
                     , Hecate.Evaluator
                     , Hecate.Error
                     , Hecate.GPG
                     , Hecate.GPG.Process
                     , Hecate.Interfaces
                     , Hecate.Parser
                     , Hecate.Printing
                     , Data.ByteString64
  build-depends:       base                 >=4.9  && <5
                     , base64-bytestring    >=1.0  && <1.3
                     , bytestring           >=0.10 && <0.12
                     , containers           >=0.6  && <0.7
                     , deepseq              >=1.4  && <1.5
                     , direct-sqlite        >=2.3  && <2.4
                     , directory            >=1.2  && <1.4
                     , exceptions           >=0.8  && <0.11
                     , filepath             >=1.4  && <1.5
                     , mtl                  >=2.2  && <2.3
                     , optparse-applicative >=0.13 && <0.18
                     , pretty               >=1.1  && <1.2
                     , process              >=1.4  && <2
                     , SHA                  >=1.6  && <1.7
                     , text                 >=1.2  && <2.1
                     , time                 >=1.5  && <2
                     , transformers         >=0.5  && <0.6
  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall

  if flag(backend-json)
    cpp-options:       -DBACKEND_JSON
    exposed-modules:   Hecate.Backend.JSON
                     , Hecate.Backend.JSON.AppState
                     , Data.Multimap
    build-depends:     aeson        >=1.5   && <3
                     , aeson-pretty >=0.8.7 && <0.9

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Hecate.Orphans
                     , Hecate.Properties
  build-depends:       base          >=4.9  && <5
                     , QuickCheck    >=2.8  && <2.15
                     , containers    >=0.6  && <0.7
                     , direct-sqlite >=2.3  && <2.4
                     , directory     >=1.2  && <1.4
                     , temporary     >=1.3  && <1.4
                     , text          >=1.2  && <2.1
                     , hecate
  hs-source-dirs:      tests
  default-language:    Haskell98
  ghc-options:         -Wall

  if flag(backend-json)
    cpp-options:       -DBACKEND_JSON
    other-modules:     Data.Multimap.Tests
    build-depends:     dwergaz >=0.2  && <0.3
